[package]
name = "ratatui-ractor"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
crossterm = "0.28.1"
ractor = "0.15.2"
ratatui = "0.29.0"
tokio = { version = "1.44.1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.19"
